--- a/index.ipynb
+++ b/index.ipynb
@@ -56,10 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,17 +88,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -218,7 +216,7 @@
        "4                                            2283384                     "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +238,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 197625 entries, 0 to 197624\n",
-      "Data columns (total 12 columns):\n",
+      "Data columns (total 11 columns):\n",
       "C/A                                                                     197625 non-null object\n",
       "UNIT                                                                    197625 non-null object\n",
       "SCP                                                                     197625 non-null object\n",
@@ -252,9 +250,8 @@
       "DESC                                                                    197625 non-null object\n",
       "ENTRIES                                                                 197625 non-null int64\n",
       "EXITS                                                                   197625 non-null int64\n",
-      "On_N_Line                                                               197625 non-null bool\n",
-      "dtypes: bool(1), int64(2), object(9)\n",
-      "memory usage: 16.8+ MB\n"
+      "dtypes: int64(2), object(9)\n",
+      "memory usage: 16.6+ MB\n"
      ]
     }
    ],
@@ -284,10 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def contains_n(text):\n",
@@ -304,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +390,7 @@
        "1       True  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +493,7 @@
        "197624      False  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +515,7 @@
        "Name: On_N_Line, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +557,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -878,59 +873,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A002</td>\n",
-       "      <td>R051</td>\n",
-       "      <td>02-00-00</td>\n",
-       "      <td>59 ST</td>\n",
-       "      <td>NQR456W</td>\n",
-       "      <td>BMT</td>\n",
-       "      <td>2018-08-25</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>REGULAR</td>\n",
-       "      <td>6736067</td>\n",
-       "      <td>2283184</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A002</td>\n",
-       "      <td>R051</td>\n",
-       "      <td>02-00-00</td>\n",
-       "      <td>59 ST</td>\n",
-       "      <td>NQR456W</td>\n",
-       "      <td>BMT</td>\n",
-       "      <td>2018-08-25</td>\n",
-       "      <td>04:00:00</td>\n",
-       "      <td>REGULAR</td>\n",
-       "      <td>6736087</td>\n",
-       "      <td>2283188</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    C/A  UNIT       SCP STATION LINENAME DIVISION       DATE      TIME  \\\n",
-       "0  A002  R051  02-00-00   59 ST  NQR456W      BMT 2018-08-25  00:00:00   \n",
-       "1  A002  R051  02-00-00   59 ST  NQR456W      BMT 2018-08-25  04:00:00   \n",
-       "\n",
-       "      DESC  ENTRIES  \\\n",
-       "0  REGULAR  6736067   \n",
-       "1  REGULAR  6736087   \n",
-       "\n",
-       "   EXITS                                                                 \\\n",
-       "0                                            2283184                      \n",
-       "1                                            2283188                      \n",
-       "\n",
-       "   On_N_Line  \n",
-       "0       True  \n",
-       "1       True  "
+       "Empty DataFrame\n",
+       "Columns: [C/A, UNIT, SCP, STATION, LINENAME, DIVISION, DATE, TIME, DESC, ENTRIES, EXITS                                                               , On_N_Line]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +893,7 @@
     "df.DATE = pd.to_datetime(df.DATE)\n",
     "print(df.DATE.dtype)\n",
     "#Preview updated dataframe\n",
-    "df.head(2)"
+    "df.head(0)"
    ]
   },
   {
@@ -953,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +920,7 @@
        "Name: DATE, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
